Closed Bug 470124 Opened 16 years ago Closed 16 years ago

Crash [@ nsSVGUtils::GetRelativeRect]

Categories

(Core :: SVG, defect, P3)

x86
All
defect

Tracking

()

VERIFIED FIXED
mozilla1.9.1b3

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: crash, testcase, verified1.9.1)

Crash Data

Attachments

(2 files)

No description provided.
confirmed on Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2a1pre) Gecko/20081217 Minefield/3.2a1pre. bp-d691831b-4c50-492b-87b8-d3d8f2081217
OS: Mac OS X → All
Assignee: nobody → longsonr
Attachment #353681 - Flags: superreview?(roc)
Attachment #353681 - Flags: review?(roc)
Flags: blocking1.9.1?
Attachment #353681 - Flags: superreview?(roc)
Attachment #353681 - Flags: superreview+
Attachment #353681 - Flags: review?(roc)
Attachment #353681 - Flags: review+
Keywords: checkin-needed
Whiteboard: [needs landing]
Attachment #353681 - Attachment description: patch → patch [Checkin: Comment 3]
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
Target Milestone: --- → mozilla1.9.2a1
Attachment #353681 - Flags: approval1.9.1?
Whiteboard: [c-n: baking for 1.9.1]
Simple fix to not call code that will crash. Low risk.
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P3
Attachment #353681 - Flags: approval1.9.1?
Keywords: checkin-needed
Whiteboard: [c-n: baking for 1.9.1] → [c-n: baking for 1.9.1] [needs landing 1.9.1]
Attachment #353681 - Attachment description: patch [Checkin: Comment 3] → patch [Checkin: Comment 3 & 5]
Whiteboard: [c-n: baking for 1.9.1] [needs landing 1.9.1]
Target Milestone: mozilla1.9.2a1 → mozilla1.9.1b3
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b3pre) Gecko/20081229 Shiretoko/3.1b3pre, and Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b3pre) Gecko/20081229 Shiretoko/3.1b3pre also verified fixed on the trunk using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20081229 Minefield/3.2a1pre and Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20081229 Minefield/3.2a1pre
Status: RESOLVED → VERIFIED
Flags: in-testsuite+
Crash Signature: [@ nsSVGUtils::GetRelativeRect]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: