Bug 470124 - Crash [@ nsSVGUtils::GetRelativeRect]; r+sr=roc