layout/svg/base/src/nsSVGFilterFrame.cpp
@@ -122,6 +122,8 @@ nsAutoFilterInstance::nsAutoFilterInstance(nsIFrame *aTarget,
 
   PRUint16 units =
     filter->mEnumAttributes[nsSVGFilterElement::FILTERUNITS].GetAnimValue();
+  PRUint16 primitiveUnits =
+    filter->mEnumAttributes[nsSVGFilterElement::PRIMITIVEUNITS].GetAnimValue();
   nsCOMPtr<nsIDOMSVGRect> bbox;
   if (aOverrideSourceBBox) {
     NS_NewSVGRect(getter_AddRefs(bbox),
@@ -130,7 +132,8 @@ nsAutoFilterInstance::nsAutoFilterInstance(nsIFrame *aTarget,
   } else {
     bbox = nsSVGUtils::GetBBox(aTarget);
   }
-  if (!bbox && units == nsIDOMSVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX)
+  if (!bbox && (units == nsIDOMSVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX ||
+                primitiveUnits == nsIDOMSVGUnitTypes::SVG_UNIT_TYPE_OBJECTBOUNDINGBOX))
     return;
 
   gfxRect filterArea = nsSVGUtils::GetRelativeRect(units,
@@ -182,8 +185,6 @@ nsAutoFilterInstance::nsAutoFilterInstance(nsIFrame *aTarget,
     MapDeviceRectToFilterSpace(finiM, filterRes, aDirtyInputRect);
 
   // Setup instance data
-  PRUint16 primitiveUnits =
-    filter->mEnumAttributes[nsSVGFilterElement::PRIMITIVEUNITS].GetAnimValue();
   mInstance = new nsSVGFilterInstance(aTarget, aPaint, filter, bbox, filterArea,
                                       nsIntSize(filterRes.width, filterRes.height),
                                       fini,
